assets/css/main.css
/* PAGE */
.page {
	background-image: linear-gradient(to bottom, #e8e8e9 0%, #ffffff 180px);
	font-family: 'Roboto Slab', serif;
	margin: 0;
	min-height: 100vh;
}
.page__wrapper {
	margin: 0 auto;
	max-width: 272px;
}



/* HEADER */
.page__title {
	bottom: 12px;
	color: #924f46;
	font-size: 14px;
	left: 50%;
	line-height: 24px;
	position: absolute;
	transform: translateX(-50%);
}
.page__project {
	background: url(../img/github-brands.svg) left top no-repeat;
	background-size: auto 24px;
	height: 1px;
	overflow: hidden;
	padding-top: 23px;
	position: absolute;
	right: 24px;
	top: 24px;
	width: 24px;
}



/* CONTENT */
.page__content {
	background: pink;
	background: url(../img/barlos-med.png) center bottom 36px no-repeat;
	background-size: 272px;
	box-sizing: border-box;
	height: 100vh;
	min-height: 500px;
	padding-top: 60px;
	position: relative;
}
.projects {
	list-style: none;
	margin: 0;
	padding: 0;
}
.project {
	border-bottom: 1px solid #d8d8d8;
}
.project__link {
	display: block;
	padding: 12px 0;
	text-decoration: none;
}
.project__link-counter {
	color: #0c0f16;
	font-family: 'Roboto Mono', monospace;
	font-size: 14px;
	line-height: 24px;
	opacity: .5;
	position: relative;
	top: 6px;
}
.project__link-label {
	color: #0c0f16;
	display: block;
	font-size: 24px;
	line-height: 36px;
	transition: color ease .4s;
}
.project__link:hover .project__link-label {
	color: #924f46;
}

